<resources>
    <string name="app_name">MyScheduler</string>
    <string name="action_settings">Settings</string>
    <string name="textview">TextView</string>
    <string name="edit_cancel_button">キャンセル</string>
    <string name="action_home">Home</string>
    <string name="action_report">Report</string>
    <string name="action_aaaa" />
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="set">設定</string>
    <string name="bib">バイブレーション</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="timer">タイマー音</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="helppage">HelpPage</string>
    <string name="kaku">確定</string>
    <string name="Report">Button</string>
    <string name="Settings">Button</string>
    <string name="report">Report</string>
    <string name="settings">Settings</string>
    <string name="on_off">On・Off</string>
    <string name="no_date">No Data</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_time" />

</resources>
